_almost_ fix the homepage any stretch errors

--- a/framebuzz/static/framebuzz/marketing/sass/screen.scss
+++ b/framebuzz/static/framebuzz/marketing/sass/screen.scss
@@ -106,14 +106,9 @@ div.marketing-content {
     position: relative;
     width: 100%;
 
-    #fb {
-        height: 1443px;
-        width: 100%;
-
-        div.anystretch img {
-            left: 0 !important;
-            top: -143px !important;
-        }
+    div.anystretch img {
+        left: 0 !important;
+        top: -143px !important;
     }
 
     #home {
@@ -235,7 +230,7 @@ div.marketing-content {
         }
 
         #community {
-            height: 580px;
+            height: 633px;
 
             #community-container {
                 padding-left: 93px;
@@ -243,19 +238,19 @@ div.marketing-content {
                 padding-bottom: 86px;
                 position: relative;
 
-                span.arrow { 
-                    top: 0;
-                    left: 594px; 
-                }
+                    span.arrow { 
+                        top: 0;
+                        left: 594px; 
+                    }
 
-                h3 {
-                    color: #202020;
-                    font-family: 'proxima-nova';
-                    font-size: 34px;
-                    font-weight: 300;
-                    padding-top: 73px;
-                    padding-bottom: 23px;
-                }
+                    h3 {
+                        color: #202020;
+                        font-family: 'proxima-nova';
+                        font-size: 34px;
+                        font-weight: 300;
+                        padding-top: 73px;
+                        padding-bottom: 23px;
+                    }
 
                 p {
                     color: #202020;
